# object-detection-system

./: Dockerfile  README.md  pyproject.toml
src/app/: app.py
src/models/: detector.py
